--- a/application/src/main/resources/bundle_en_US.properties
+++ b/application/src/main/resources/bundle_en_US.properties
@@ -3,3 +3,13 @@ date_format = MM/dd/yyyy
 time_format = HH:mm:ss
 invalid_parameters_1 = Incorrect number of arguments provided. The application requires one argument however, 
 invalid_parameters_2 = argument/s were provided.
+
+Move_Forward_a_Day = Move Forward a Day
+Move_Forward_a_Month = Move Forward a Month
+Move_Forward_a_Week = Move Forward a Week
+Move_Forward_a_Year = Move Forward a Year
+Move_to_Today = Move to Today
+Move_Backward_a_Day = Move Backward a Day
+Move_Backward_a_Month = Move Backward a Month
+Move_Backward_a_Week = Move Backward a Week
+Move_Backward_a_Year = Move Backward a Year
