--- a/application/src/main/resources/bundle_es_ES.properties
+++ b/application/src/main/resources/bundle_es_ES.properties
@@ -3,3 +3,13 @@ date_format = dd/MM/yyyy
 time_format = HH:mm:ss
 invalid_parameters_1 = Número incorrecto de argumentos proporcionados. el aplicación application requiere uno argumento sin embargo, 
 invalid_parameters_2 = argumento/s tengo proporcionados.
+
+Move_Forward_a_Day = Avanzar un día
+Move_Forward_a_Month = Avanzar un mes
+Move_Forward_a_Week = Avanzar una semana
+Move_Forward_a_Year = Avanzar un año
+Move_to_Today = Mover a hoy
+Move_Backward_a_Day = Retroceder un día
+Move_Backward_a_Month = Retroceder un mes
+Move_Backward_a_Week = Retroceder una semana
+Move_Backward_a_Year = Retroceder un año
