--- a/application/src/main/resources/bundle_es_ES.properties
+++ b/application/src/main/resources/bundle_es_ES.properties
@@ -13,3 +13,13 @@ Move_Backward_a_Day = Retroceder un día
 Move_Backward_a_Month = Retroceder un mes
 Move_Backward_a_Week = Retroceder una semana
 Move_Backward_a_Year = Retroceder un año
+
+Exiting_the_Program = Saliendo del programa
+Not_a_valid_input = No es una entrada válida
+The_valid_commands_are = Los comandos válidos son:
+
+To_search_for_an_event = Para buscar un evento
+To_exit_the_program = Para salir del programa
+
+No_events_to_search = No hay eventos para buscar
+No_events_found_matching_the_search = No se encontraron eventos que coincidan con la búsqueda
