--- a/application/src/main/resources/bundle_en_AU.properties
+++ b/application/src/main/resources/bundle_en_AU.properties
@@ -4,7 +4,6 @@ time_format = HH:mm:ss
 invalid_parameters_1 = Incorrect number of arguments provided. The application requires one argument however, 
 invalid_parameters_2 = argument/s were provided.
 
-
 Move_Forward_a_Day = Move Forward a Day
 Move_Forward_a_Month = Move Forward a Month
 Move_Forward_a_Week = Move Forward a Week
@@ -14,3 +13,13 @@ Move_Backward_a_Day = Move Backward a Day
 Move_Backward_a_Month = Move Backward a Month
 Move_Backward_a_Week = Move Backward a Week
 Move_Backward_a_Year = Move Backward a Year
+
+Exiting_the_Program = Exiting the Program
+Not_a_valid_input = Not a valid input
+The_valid_commands_are = The valid commands are:
+
+To_search_for_an_event = To search for an event
+To_exit_the_program = To exit the program
+
+No_events_to_search = No events to search
+No_events_found_matching_the_search = No events found matching the search
